@@ -1,8 +1,6 @@
 v1.0
 	make selection, dnd, more like thunar
-	some way to bring up the info viewer when art is disabled
 	taglib bug with > 1017 files selected?
-	wrap text in song info window to keep size constant
 	tabbed song info window?
 
 Future:
